--- a/index.html
+++ b/index.html
@@ -71,8 +71,20 @@
           <strong>UI/UX</strong> enthusiast specialized in building stunning
           pixel-perfect interactive websites/applications (sirf mazak)
         </p>
-        <a class="hero__btn social btn " href="https://www.linkedin.com/in/udayrajghuge" target="_blank" style="background-color: #005988;">Linkedin</a>
-        <a class="hero__btn social btn " href="https://github.com/forUdayraj" target="_blank" style="background-color: rgb(246, 243, 243); color: var(--clr-slate800);">Github</a>
+        <span>
+          <a class="hero__btn social btn " href="https://www.linkedin.com/in/udayrajghuge" target="_blank" style="background-color: #005988;">Linkedin</a>
+
+          <a class="hero__btn social btn " href="https://github.com/forUdayraj" target="_blank" style="background-color: rgb(246, 243, 243); color: var(--clr-slate800);">Github</a>
+        </span>
+        
+      </section>
+      <section class="about container section">
+        <div class="about__content">
+          <h2 id="about" class="about__title">Past Projects</h2>
+          <a href="https://github.com/forUdayraj"><h3 class="about__subtitle">MinMentor</h3> </a>
+          <p class="about__description">Mentor and Mentee 1:1 Sessions for Various domain and jobfairs created in Nextjs and Typescript</p>
+
+        </div>
       </section>
       <section class="about container section">
         <div class="about__content">
