waing hand remove

--- a/index.html
+++ b/index.html
@@ -64,18 +64,16 @@
     <main>
       <section class="hero container">
         <img class="hero__img" src="/resume.jpeg" alt="profile picture" />
-        <h2 class="hero__subtitles">Hi i'm Udayraj👋</h2>
+        <h2 class="hero__subtitles">Hi i'm Udayraj</h2>
         <h1 class="hero__title">Front-END<br />WEB DEVELOPER.</h1>
         <p class="hero__description">
           A passionate <strong>Front-end & Back-end</strong> web developer and
           <strong>UI/UX</strong> enthusiast specialized in building stunning
           pixel-perfect interactive websites/applications (sirf mazak)
         </p>
-        <span>
           <a class="hero__btn social btn " href="https://www.linkedin.com/in/udayrajghuge" target="_blank" style="background-color: #005988;">Linkedin</a>
 
           <a class="hero__btn social btn " href="https://github.com/forUdayraj" target="_blank" style="background-color: rgb(246, 243, 243); color: var(--clr-slate800);">Github</a>
-        </span>
         
       </section>
       <section class="about container section">
