changes in index.html and image changed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p class="hero__description">
           A passionate <strong>Front-end & Back-end</strong> web developer and
           <strong>UI/UX</strong> enthusiast specialized in building stunning
-          pixel-perfect interactive websites/applications (sirf mazak)
+          pixel-perfect interactive websites/applications
         </p>
           <a class="hero__btn social btn " href="https://www.linkedin.com/in/udayrajghuge" target="_blank" style="background-color: #005988;">Linkedin</a>
 
