added and modified more files

--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@
               />
             </svg>
           </button>
-          <li><a class="header__resume btn" href="https://drive.google.com/file/d/1JodkvqRrLX6zfGQ21I5UHVAXi7SVP9OS/view?usp=drive_link" target="_blank">Resume</a></li>
+          <li>
+            <a
+              class="header__resume btn"
+              href="https://drive.google.com/file/d/1qRUeyN98haSbN-7iYlAZgsOXMRlYUd7K/view?usp=sharing"
+              target="_blank"
+              >Resume</a
+            >
+          </li>
         </ul>
         <button class="header__bars">
           <svg
@@ -71,17 +78,51 @@
           <strong>UI/UX</strong> enthusiast specialized in building stunning
           pixel-perfect interactive websites/applications
         </p>
-          <a class="hero__btn social btn " href="https://www.linkedin.com/in/udayrajghuge" target="_blank" style="background-color: #005988;">Linkedin</a>
+        <a
+          class="hero__btn social btn"
+          href="https://www.linkedin.com/in/udayrajghuge"
+          target="_blank"
+          style="background-color: #005988"
+          >Linkedin</a
+        >
 
-          <a class="hero__btn social btn " href="https://github.com/forUdayraj" target="_blank" style="background-color: rgb(246, 243, 243); color: var(--clr-slate800);">Github</a>
-        
+        <a
+          class="hero__btn social btn"
+          href="https://github.com/forUdayraj"
+          target="_blank"
+          style="
+            background-color: rgb(246, 243, 243);
+            color: var(--clr-slate800);
+          "
+          >Github</a
+        >
       </section>
       <section class="about container section">
         <div class="about__content">
           <h2 id="about" class="about__title">Past Projects</h2>
-          <a href="https://github.com/forUdayraj"><h3 class="about__subtitle">MinMentor</h3> </a>
-          <p class="about__description">Mentor and Mentee 1:1 Sessions for Various domain and jobfairs created in Nextjs and Typescript</p>
-
+          <a href="https://github.com/forUdayraj"
+            ><h3 class="about__subtitle">MinMentor</h3>
+          </a>
+          <p class="about__description">
+            Mentor and Mentee 1:1 Sessions for Various domain and jobfairs
+            created in Nextjs and Typescript
+          </p>
+          <a href="https://github.com/forUdayraj"
+            ><h3 class="about__subtitle">FinVault</h3>
+          </a>
+          <p class="about__description">
+            Built and deployed a secure full-stack banking application using
+            Spring Boot, React, Hibernate, and MySQL with real-time transactions
+            and responsive UI.
+          </p>
+          <a href="https://github.com/forUdayraj"
+            ><h3 class="about__subtitle">Homeservicebooking</h3>
+          </a>
+          <p class="about__description">
+            Developed a responsive Home Service Booking platform using Node.js,
+            Express.js, MySQL, and Bootstrap, enabling seamless service
+            browsing, scheduling, and customer–provider interactions.
+          </p>
         </div>
       </section>
       <section class="about container section">
@@ -99,17 +140,27 @@
               <li class="about__list">CSS</li>
               <li class="about__list">HTML</li>
             </ul>
-            <ul class="about__ul"><li class="about__list">Reactjs</li>
-            <li class="about__list">NodeJS</li>
-            <li class="about__list">ExpressJS</li></ul>
+            <ul class="about__ul">
+              <li class="about__list">Reactjs</li>
+              <li class="about__list">NodeJS</li>
+              <li class="about__list">ExpressJS</li>
+            </ul>
           </div>
         </div>
         <div></div>
       </section>
       <section class="contact container section">
         <h2 id="contact" class="contact__title">Get In Contact</h2>
-        <p class="contact__description">If you want to build a websites or tech related projects go through the contact i can definiatly build a better product than this.</p>
-        <a class="contact__btn btn" href="mailto:for.udayraj@gmail.com" target="_blank">Reach Out</a>
+        <p class="contact__description">
+          If you want to build a websites or tech related projects go through
+          the contact i can definiatly build a better product than this.
+        </p>
+        <a
+          class="contact__btn btn"
+          href="mailto:for.udayraj@gmail.com"
+          target="_blank"
+          >Reach Out</a
+        >
       </section>
     </main>
     <footer class="footer container section">
