--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
           <a href="#experience">Experience</a>
           <a href="#projects">Projects</a>
           <a href="#contact">Contact</a>
-          <button id="theme-toggle" aria-label="Toggle dark mode">
-            🌙
+          <span class="nav-divider">·</span>
+          <button id="theme-toggle" aria-label="Toggle theme">
+            Dark Mode
           </button>
         </nav>
       </div>
@@ -49,7 +50,7 @@
       </p>
 
       <p>
-        I work primarily with <strong>Spring Boot, MySQL, JWT, Angular, and React</strong>
+        I primarily work with <strong>Spring Boot, MySQL, JWT, Angular, and React</strong>
         and like building software that survives production.
       </p>
 
@@ -135,26 +136,25 @@
 
   <!-- DARK MODE SCRIPT -->
   <script>
-  const toggle = document.getElementById("theme-toggle");
-  const root = document.documentElement;
+    const toggle = document.getElementById("theme-toggle");
+    const root = document.documentElement;
 
-  // Load saved theme
-  const savedTheme = localStorage.getItem("theme");
-  if (savedTheme === "dark") {
-    root.classList.add("dark");
-    toggle.textContent = "Light Mode";
-  } else {
-    toggle.textContent = "Dark Mode";
-  }
+    const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+    const savedTheme = localStorage.getItem("theme");
 
-  // Toggle theme
-  toggle.addEventListener("click", () => {
-    const isDark = root.classList.toggle("dark");
-    toggle.textContent = isDark ? "Light Mode" : "Dark Mode";
-    localStorage.setItem("theme", isDark ? "dark" : "light");
-  });
-</script>
+    if (savedTheme === "dark" || (!savedTheme && prefersDark)) {
+      root.classList.add("dark");
+      toggle.textContent = "Light Mode";
+    } else {
+      toggle.textContent = "Dark Mode";
+    }
 
+    toggle.addEventListener("click", () => {
+      const isDark = root.classList.toggle("dark");
+      toggle.textContent = isDark ? "Light Mode" : "Dark Mode";
+      localStorage.setItem("theme", isDark ? "dark" : "light");
+    });
+  </script>
 
 </body>
 </html>
